minisound_ffi/src/include/sound_data/pulse_sound_data.h

typedef struct PulseSoundData PulseSoundData;