minisound_ffi/src/include/engine.h


typedef struct Engine Engine;


EXPORT Engine *engine_alloc(void);

EXPORT Result engine_init(Engine *const self, uint32_t const period_ms);

EXPORT void engine_uninit(Engine *const self);


EXPORT Result engine_start(Engine *const self);


EXPORT Result engine_load_sound(
    Engine *const self,
    Sound *const sound,
    uint8_t const *const data,
    size_t const data_size
);

EXPORT Result engine_generate_waveform(Engine *const self, Sound *const sound);