minisound_ffi/lib/src/minisound_ffi_bindings.dart


  void waveform_sound_data_set_type(
    ffi.Pointer<WaveformSoundData> self,
    WaveformType value,
  ) {
    return _waveform_sound_data_set_type(
      self,
      value.value,
    );
  }

  late final _waveform_sound_data_set_typePtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<WaveformSoundData>,
              ffi.UnsignedInt)>>('waveform_sound_data_set_type');
  late final _waveform_sound_data_set_type = _waveform_sound_data_set_typePtr
      .asFunction<void Function(ffi.Pointer<WaveformSoundData>, int)>();

  double waveform_sound_data_get_freq(
    ffi.Pointer<WaveformSoundData> self,
  ) {
    return _waveform_sound_data_get_freq(
      self,
    );
  }

  late final _waveform_sound_data_get_freqPtr = _lookup<
          ffi
          .NativeFunction<ffi.Double Function(ffi.Pointer<WaveformSoundData>)>>(
      'waveform_sound_data_get_freq');
  late final _waveform_sound_data_get_freq = _waveform_sound_data_get_freqPtr
      .asFunction<double Function(ffi.Pointer<WaveformSoundData>)>();

  void waveform_sound_data_set_freq(
    ffi.Pointer<WaveformSoundData> self,
    double value,
  ) {
    return _waveform_sound_data_set_freq(
      self,
      value,
    );
  }

  late final _waveform_sound_data_set_freqPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<WaveformSoundData>,
              ffi.Double)>>('waveform_sound_data_set_freq');
  late final _waveform_sound_data_set_freq = _waveform_sound_data_set_freqPtr
      .asFunction<void Function(ffi.Pointer<WaveformSoundData>, double)>();

  SoundData waveform_sound_data_ww_sound_data(
    ffi.Pointer<WaveformSoundData> self,
  ) {
    return _waveform_sound_data_ww_sound_data(
      self,
    );
  }

  late final _waveform_sound_data_ww_sound_dataPtr = _lookup<
          ffi
          .NativeFunction<SoundData Function(ffi.Pointer<WaveformSoundData>)>>(
      'waveform_sound_data_ww_sound_data');
  late final _waveform_sound_data_ww_sound_data =
      _waveform_sound_data_ww_sound_dataPtr
          .asFunction<SoundData Function(ffi.Pointer<WaveformSoundData>)>();

  ffi.Pointer<Sound> sound_alloc() {
    return _sound_alloc();
  }

  late final _sound_allocPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<Sound> Function()>>('sound_alloc');
  late final _sound_alloc =
      _sound_allocPtr.asFunction<ffi.Pointer<Sound> Function()>();

  Result sound_init(
    ffi.Pointer<Sound> self,
    SoundData sound_data,
    ffi.Pointer<ma_engine> engine,
  ) {
    return Result.fromValue(_sound_init(
      self,
      sound_data,
      engine,
    ));
  }

  late final _sound_initPtr = _lookup<
      ffi.NativeFunction<
          ffi.UnsignedInt Function(ffi.Pointer<Sound>, SoundData,
              ffi.Pointer<ma_engine>)>>('sound_init');
  late final _sound_init = _sound_initPtr.asFunction<
      int Function(ffi.Pointer<Sound>, SoundData, ffi.Pointer<ma_engine>)>();

  void sound_unload(
    ffi.Pointer<Sound> self,
  ) {
    return _sound_unload(
      self,
    );
  }

  late final _sound_unloadPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<Sound>)>>(
          'sound_unload');
  late final _sound_unload =
      _sound_unloadPtr.asFunction<void Function(ffi.Pointer<Sound>)>();

  Result sound_play(
    ffi.Pointer<Sound> self,
  ) {
    return Result.fromValue(_sound_play(
      self,
    ));
  }

  late final _sound_playPtr =
      _lookup<ffi.NativeFunction<ffi.UnsignedInt Function(ffi.Pointer<Sound>)>>(
          'sound_play');
  late final _sound_play =
      _sound_playPtr.asFunction<int Function(ffi.Pointer<Sound>)>();

  void sound_pause(
    ffi.Pointer<Sound> self,
  ) {
    return _sound_pause(
      self,
    );
  }

  late final _sound_pausePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<Sound>)>>(
          'sound_pause');
  late final _sound_pause =
      _sound_pausePtr.asFunction<void Function(ffi.Pointer<Sound>)>();

  void sound_stop(
    ffi.Pointer<Sound> self,
  ) {
    return _sound_stop(
      self,
    );
  }

  late final _sound_stopPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<Sound>)>>(
          'sound_stop');
  late final _sound_stop =
      _sound_stopPtr.asFunction<void Function(ffi.Pointer<Sound>)>();

  double sound_get_volume(
    ffi.Pointer<Sound> self,
  ) {
    return _sound_get_volume(
      self,
    );
  }

  late final _sound_get_volumePtr =
      _lookup<ffi.NativeFunction<ffi.Float Function(ffi.Pointer<Sound>)>>(
          'sound_get_volume');
  late final _sound_get_volume =
      _sound_get_volumePtr.asFunction<double Function(ffi.Pointer<Sound>)>();

  void sound_set_volume(
    ffi.Pointer<Sound> self,
    double value,
  ) {
    return _sound_set_volume(
      self,
      value,
    );
  }

  late final _sound_set_volumePtr = _lookup<
          ffi.NativeFunction<ffi.Void Function(ffi.Pointer<Sound>, ffi.Float)>>(
      'sound_set_volume');
  late final _sound_set_volume = _sound_set_volumePtr
      .asFunction<void Function(ffi.Pointer<Sound>, double)>();

  double sound_get_duration(
    ffi.Pointer<Sound> self,
  ) {
    return _sound_get_duration(
      self,
    );
  }

  late final _sound_get_durationPtr =
      _lookup<ffi.NativeFunction<ffi.Float Function(ffi.Pointer<Sound>)>>(
          'sound_get_duration');
  late final _sound_get_duration =
      _sound_get_durationPtr.asFunction<double Function(ffi.Pointer<Sound>)>();

  bool sound_get_is_playing(
    ffi.Pointer<Sound> self,
  ) {
    return _sound_get_is_playing(
      self,
    );
  }

  late final _sound_get_is_playingPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(ffi.Pointer<Sound>)>>(
          'sound_get_is_playing');
  late final _sound_get_is_playing =
      _sound_get_is_playingPtr.asFunction<bool Function(ffi.Pointer<Sound>)>();

  double sound_get_cursor(
    ffi.Pointer<Sound> self,
  ) {
    return _sound_get_cursor(
      self,
    );
  }

  late final _sound_get_cursorPtr =
      _lookup<ffi.NativeFunction<ffi.Float Function(ffi.Pointer<Sound>)>>(
          'sound_get_cursor');
  late final _sound_get_cursor =
      _sound_get_cursorPtr.asFunction<double Function(ffi.Pointer<Sound>)>();

  void sound_set_cursor(
    ffi.Pointer<Sound> self,
    double value,
  ) {
    return _sound_set_cursor(
      self,
      value,
    );
  }

  late final _sound_set_cursorPtr = _lookup<
          ffi.NativeFunction<ffi.Void Function(ffi.Pointer<Sound>, ffi.Float)>>(
      'sound_set_cursor');
  late final _sound_set_cursor = _sound_set_cursorPtr
      .asFunction<void Function(ffi.Pointer<Sound>, double)>();

  double sound_get_pitch(
    ffi.Pointer<Sound> self,
  ) {
    return _sound_get_pitch(
      self,
    );
  }

  late final _sound_get_pitchPtr =
      _lookup<ffi.NativeFunction<ffi.Float Function(ffi.Pointer<Sound>)>>(
          'sound_get_pitch');
  late final _sound_get_pitch =
      _sound_get_pitchPtr.asFunction<double Function(ffi.Pointer<Sound>)>();

  void sound_set_pitch(
    ffi.Pointer<Sound> self,
    double value,
  ) {
    return _sound_set_pitch(
      self,
      value,
    );
  }

  late final _sound_set_pitchPtr = _lookup<
          ffi.NativeFunction<ffi.Void Function(ffi.Pointer<Sound>, ffi.Float)>>(
      'sound_set_pitch');
  late final _sound_set_pitch = _sound_set_pitchPtr
      .asFunction<void Function(ffi.Pointer<Sound>, double)>();

  ffi.Pointer<EncodedSoundData> sound_get_encoded_data(
    ffi.Pointer<Sound> self,
  ) {
    return _sound_get_encoded_data(
      self,
    );
  }

  late final _sound_get_encoded_dataPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<EncodedSoundData> Function(
              ffi.Pointer<Sound>)>>('sound_get_encoded_data');
  late final _sound_get_encoded_data = _sound_get_encoded_dataPtr
      .asFunction<ffi.Pointer<EncodedSoundData> Function(ffi.Pointer<Sound>)>();

  ffi.Pointer<WaveformSoundData> sound_get_waveform_data(
    ffi.Pointer<Sound> self,
  ) {
    return _sound_get_waveform_data(
      self,
    );
  }

  late final _sound_get_waveform_dataPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<WaveformSoundData> Function(
              ffi.Pointer<Sound>)>>('sound_get_waveform_data');
  late final _sound_get_waveform_data = _sound_get_waveform_dataPtr.asFunction<
      ffi.Pointer<WaveformSoundData> Function(ffi.Pointer<Sound>)>();

  ffi.Pointer<NoiseSoundData> sound_get_noise_data(
    ffi.Pointer<Sound> self,
  ) {
    return _sound_get_noise_data(
      self,
    );
  }

  late final _sound_get_noise_dataPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<NoiseSoundData> Function(
              ffi.Pointer<Sound>)>>('sound_get_noise_data');
  late final _sound_get_noise_data = _sound_get_noise_dataPtr
      .asFunction<ffi.Pointer<NoiseSoundData> Function(ffi.Pointer<Sound>)>();

  ffi.Pointer<PulseSoundData> sound_get_pulse_data(
    ffi.Pointer<Sound> self,
  ) {
    return _sound_get_pulse_data(
      self,
    );
  }

  late final _sound_get_pulse_dataPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<PulseSoundData> Function(
              ffi.Pointer<Sound>)>>('sound_get_pulse_data');
  late final _sound_get_pulse_data = _sound_get_pulse_dataPtr
      .asFunction<ffi.Pointer<PulseSoundData> Function(ffi.Pointer<Sound>)>();

  ffi.Pointer<Engine> engine_alloc() {
    return _engine_alloc();
  }

  late final _engine_allocPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<Engine> Function()>>(
          'engine_alloc');
  late final _engine_alloc =
      _engine_allocPtr.asFunction<ffi.Pointer<Engine> Function()>();

  Result engine_init(
    ffi.Pointer<Engine> self,
    int period_ms,
  ) {
    return Result.fromValue(_engine_init(
      self,
      period_ms,
    ));
  }

  late final _engine_initPtr = _lookup<
      ffi.NativeFunction<
          ffi.UnsignedInt Function(
              ffi.Pointer<Engine>, ffi.Uint32)>>('engine_init');
  late final _engine_init =
      _engine_initPtr.asFunction<int Function(ffi.Pointer<Engine>, int)>();

  void engine_uninit(
    ffi.Pointer<Engine> self,
  ) {
    return _engine_uninit(
      self,
    );
  }

  late final _engine_uninitPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<Engine>)>>(
          'engine_uninit');
  late final _engine_uninit =
      _engine_uninitPtr.asFunction<void Function(ffi.Pointer<Engine>)>();

  Result engine_start(
    ffi.Pointer<Engine> self,
  ) {
    return Result.fromValue(_engine_start(
      self,
    ));
  }

  late final _engine_startPtr = _lookup<
          ffi.NativeFunction<ffi.UnsignedInt Function(ffi.Pointer<Engine>)>>(
      'engine_start');
  late final _engine_start =
      _engine_startPtr.asFunction<int Function(ffi.Pointer<Engine>)>();

  Result engine_load_sound(
    ffi.Pointer<Engine> self,
    ffi.Pointer<Sound> sound,
    ffi.Pointer<ffi.Uint8> data,
    int data_size,
  ) {
    return Result.fromValue(_engine_load_sound(
      self,
      sound,
      data,
      data_size,
    ));
  }

  late final _engine_load_soundPtr = _lookup<
      ffi.NativeFunction<
          ffi.UnsignedInt Function(ffi.Pointer<Engine>, ffi.Pointer<Sound>,
              ffi.Pointer<ffi.Uint8>, ffi.Size)>>('engine_load_sound');
  late final _engine_load_sound = _engine_load_soundPtr.asFunction<
      int Function(ffi.Pointer<Engine>, ffi.Pointer<Sound>,
          ffi.Pointer<ffi.Uint8>, int)>();

  Result engine_generate_waveform(
    ffi.Pointer<Engine> self,
    ffi.Pointer<Sound> sound,
  ) {
    return Result.fromValue(_engine_generate_waveform(
      self,
      sound,
    ));
  }

  late final _engine_generate_waveformPtr = _lookup<
      ffi.NativeFunction<
          ffi.UnsignedInt Function(ffi.Pointer<Engine>,
              ffi.Pointer<Sound>)>>('engine_generate_waveform');
  late final _engine_generate_waveform = _engine_generate_waveformPtr
      .asFunction<int Function(ffi.Pointer<Engine>, ffi.Pointer<Sound>)>();
